// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatsBar > スナップショットテスト > 01モード（残り点数表示あり）の見た目が一致する 1`] = `
<div>
  <output
    aria-label="練習統計情報"
    class="stats-bar"
  >
    <div
      class="stats-bar__grid"
    >
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          正解数
        </dt>
        <dd
          class="stats-bar__value"
        >
          8
           / 
          10
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          正答率
        </dt>
        <dd
          class="stats-bar__value"
        >
          80.0%
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          連続正解
        </dt>
        <dd
          class="stats-bar__value"
        >
          5
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          残り問題数
        </dt>
        <dd
          class="stats-bar__value"
        >
          0問
        </dd>
      </dl>
      <dl
        class="stats-bar__item stats-bar__item--highlight"
      >
        <dt
          class="stats-bar__label"
        >
          残り点数
        </dt>
        <dd
          class="stats-bar__value"
        >
          381
        </dd>
      </dl>
    </div>
  </output>
</div>
`;

exports[`StatsBar > スナップショットテスト > 全問題解答済み状態の見た目が一致する 1`] = `
<div>
  <output
    aria-label="練習統計情報"
    class="stats-bar"
  >
    <div
      class="stats-bar__grid"
    >
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          正解数
        </dt>
        <dd
          class="stats-bar__value"
        >
          8
           / 
          10
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          正答率
        </dt>
        <dd
          class="stats-bar__value"
        >
          80.0%
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          連続正解
        </dt>
        <dd
          class="stats-bar__value"
        >
          3
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          残り問題数
        </dt>
        <dd
          class="stats-bar__value"
        >
          0問
        </dd>
      </dl>
    </div>
  </output>
</div>
`;

exports[`StatsBar > スナップショットテスト > 問題数モードの見た目が一致する 1`] = `
<div>
  <output
    aria-label="練習統計情報"
    class="stats-bar"
  >
    <div
      class="stats-bar__grid"
    >
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          正解数
        </dt>
        <dd
          class="stats-bar__value"
        >
          5
           / 
          7
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          正答率
        </dt>
        <dd
          class="stats-bar__value"
        >
          71.4%
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          連続正解
        </dt>
        <dd
          class="stats-bar__value"
        >
          2
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          残り問題数
        </dt>
        <dd
          class="stats-bar__value"
        >
          13問
        </dd>
      </dl>
    </div>
  </output>
</div>
`;

exports[`StatsBar > スナップショットテスト > 基本的なレンダリング結果が一致する 1`] = `
<div>
  <output
    aria-label="練習統計情報"
    class="stats-bar"
  >
    <div
      class="stats-bar__grid"
    >
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          正解数
        </dt>
        <dd
          class="stats-bar__value"
        >
          0
           / 
          0
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          正答率
        </dt>
        <dd
          class="stats-bar__value"
        >
          0.0%
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          連続正解
        </dt>
        <dd
          class="stats-bar__value"
        >
          0
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          残り問題数
        </dt>
        <dd
          class="stats-bar__value"
        >
          10問
        </dd>
      </dl>
    </div>
  </output>
</div>
`;

exports[`StatsBar > スナップショットテスト > 時間切れ状態の見た目が一致する 1`] = `
<div>
  <output
    aria-label="練習統計情報"
    class="stats-bar"
  >
    <div
      class="stats-bar__grid"
    >
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          正解数
        </dt>
        <dd
          class="stats-bar__value"
        >
          5
           / 
          10
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          正答率
        </dt>
        <dd
          class="stats-bar__value"
        >
          50.0%
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          連続正解
        </dt>
        <dd
          class="stats-bar__value"
        >
          0
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          残り時間
        </dt>
        <dd
          class="stats-bar__value"
        >
          0:00
        </dd>
      </dl>
    </div>
  </output>
</div>
`;

exports[`StatsBar > スナップショットテスト > 時間制限モードの見た目が一致する 1`] = `
<div>
  <output
    aria-label="練習統計情報"
    class="stats-bar"
  >
    <div
      class="stats-bar__grid"
    >
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          正解数
        </dt>
        <dd
          class="stats-bar__value"
        >
          7
           / 
          10
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          正答率
        </dt>
        <dd
          class="stats-bar__value"
        >
          70.0%
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          連続正解
        </dt>
        <dd
          class="stats-bar__value"
        >
          3
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          残り時間
        </dt>
        <dd
          class="stats-bar__value"
        >
          3:00
        </dd>
      </dl>
    </div>
  </output>
</div>
`;

exports[`StatsBar > スナップショットテスト > 正答率50%の見た目が一致する 1`] = `
<div>
  <output
    aria-label="練習統計情報"
    class="stats-bar"
  >
    <div
      class="stats-bar__grid"
    >
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          正解数
        </dt>
        <dd
          class="stats-bar__value"
        >
          5
           / 
          10
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          正答率
        </dt>
        <dd
          class="stats-bar__value"
        >
          50.0%
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          連続正解
        </dt>
        <dd
          class="stats-bar__value"
        >
          0
        </dd>
      </dl>
      <dl
        class="stats-bar__item"
      >
        <dt
          class="stats-bar__label"
        >
          残り問題数
        </dt>
        <dd
          class="stats-bar__value"
        >
          0問
        </dd>
      </dl>
    </div>
  </output>
</div>
`;
